# SmartParkingLot-Classifier

./: README.md  classify_picamera.py  pyproject.toml
opencv_crop_image/: classifier.py  coordinates_storage.yml  detect_parking_space.py  get_coordinates.py  roiParkingUpgrade.py
opencv_crop_image/.ipynb_checkpoints/: a-checkpoint.py  parkingTest-checkpoint.ipynb
opencv_crop_image/data/: parking_labels.txt
tests/: test_vu_test_opencv.py
