[tool.poetry]
name = "vu_test_opencv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.1"
PyYAML = "^5.4.1"
jupyterlab = "^3.0.9"
Pillow = "^8.1.0"
tensorflow = "^2.4.1"
sklearn = "^0.0"
scikit-learn = "^0.24.1"
matplotlib = "^3.3.4"
scikit-image = "^0.18.1"
pandas = "^1.2.3"
urllib3 = "^1.26.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
